--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,9 @@
 
     <link rel="preload" href="/fonts/JosefinSans.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/OxygenMono.woff2" as="font" type="font/woff2" crossorigin>
+    
     <link rel="stylesheet" href="/css/theme-switch.css">
-    <link rel="stylesheet" href="/css/tailwind.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <script type="module" src="/scripts/htmx.min.js"></script>
     <script type="module" src="/scripts/hyperscript.min.js"></script>
